refactor(editor): 优化节点编辑器代码结构和性能
- 移除未使用的 JsonObject 导入和 Objects 导入
- 简化变量初始化，移除不必要的 null 检查
- 使用 getFirst() 替代 iterator().next() 提升性能
- 优化条件判断逻辑，移除冗余的空值检查
- 简化类型转换语法，使用模式匹配提升可读性
- 修复历史记录栈操作，使用 remove